[project]
name = "yt-dlb"
version = "0.1.0"
description = "Wrapper CLI around yt-dlp para compatibilidade com yt-dlp"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [ {name = "Seu Nome", email = "you@example.com"} ]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.dependencies]
yt-dlp = "*"

[project.scripts]
yt-dlb = "yt_dlb.__main__:main"
yt-dlb-interactive = "yt_dlb.interactive:main"